--- a/index.html
+++ b/index.html
@@ -164,19 +164,14 @@
 </div>
 
         <div class="buttons">
-            <a class="button" href="./docs" rel="noopener" title="Posts">
+            <a class="button" href="./blog" rel="noopener" title="Blog">
                 <span class="button-inner">
-                    Posts
+                    Blog
                 </span>
             </a>
-            <a class="button" href="./tags" rel="noopener" title="Tags">
+            <a class="button" href="./about" rel="noopener" title="About">
                 <span class="button-inner">
-                    Tags
-                </span>
-            </a>
-            <a class="button" href="./archives" rel="noopener" title="Archives">
-                <span class="button-inner">
-                    Archives
+                    About
                 </span>
             </a>
         </div>
