--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   "description": "",
   "thumbnailUrl": "https://Mehdibenabdelkader.github.io/Flukadev/favicon.ico",
   "sameAs": [
-      "https://twitter.com/B_MehdiFluka", "https://www.instagram.com/_fluka/?hl=en", "https://github.com/Mehdibenabdelkader", "https://www.linkedin.com/in/mehdi-benabdelkader-059614224/"
+      "https://www.linkedin.com/in/mehdi-benabdelkader-059614224/", "https://www.behance.net/mehdiben5", "https://twitter.com/B_MehdiFluka", "https://www.instagram.com/_fluka/?hl=en", "https://github.com/Mehdibenabdelkader"
   ]
 }
 </script>
@@ -129,6 +129,22 @@
             height="150" width="150" />
         <h1>Mehdi Benabdelkader</h1>
         <span>Awesome Developer, Awesomer Designer</span><div class="social-icons">
+    <a href="https://www.linkedin.com/in/mehdi-benabdelkader-059614224/" target="_blank" rel="noopener noreferrer me" title="Linkedin">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+    stroke-linecap="round" stroke-linejoin="round">
+    <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+    <rect x="2" y="9" width="4" height="12"></rect>
+    <circle cx="4" cy="4" r="2"></circle>
+</svg>
+    </a>
+    <a href="https://www.behance.net/mehdiben5" target="_blank" rel="noopener noreferrer me" title="Behance">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+    stroke-linecap="round" stroke-linejoin="round">
+    <path paint-order="stroke fill markers" stroke-linejoin="miter" stroke-width="2"
+        style="font-variation-settings:normal"
+        d="M1.774 18.063V5.466h5.51c1.978 0 3.116 1.326 3.055 2.806-.043 1.049-.711 2.988-2.643 2.988h-5.93H7.73c1.224 0 3.532 1.13 3.532 3.532 0 2.4-1.873 3.27-3.318 3.27zm12.57-4.459h7.89s.012-4.18-4.167-4.18c-5.237 0-5.277 9.11-.3 9.11 3.06 0 3.935-1.806 3.935-1.806M15.526 5.823h4.987" />
+</svg>
+    </a>
     <a href="https://twitter.com/B_MehdiFluka" target="_blank" rel="noopener noreferrer me" title="Twitter">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
     stroke-linecap="round" stroke-linejoin="round">
@@ -151,14 +167,6 @@
     <path
         d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
     </path>
-</svg>
-    </a>
-    <a href="https://www.linkedin.com/in/mehdi-benabdelkader-059614224/" target="_blank" rel="noopener noreferrer me" title="Linkedin">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-    stroke-linecap="round" stroke-linejoin="round">
-    <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
-    <rect x="2" y="9" width="4" height="12"></rect>
-    <circle cx="4" cy="4" r="2"></circle>
 </svg>
     </a>
 </div>
