--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 </header>
 <main class="main"><div class="profile">
     <div class="profile_inner">
-        <img draggable="false" src="https://Mehdibenabdelkader.github.io/Flukadev/AnaLabesGrafata.png" alt="Ana Labes Grafata" title="Ana Labes Grafata"
+        <img draggable="false" src="https://Mehdibenabdelkader.github.io/Flukadev/AnaLabesGrafata.png" alt="Ana Labes Grafata." title="Ana Labes Grafata."
             height="150" width="150" />
         <h1>Mehdi Benabdelkader</h1>
         <span>Awesome Developer, Awesomer Designer</span><div class="social-icons">
